--- a/ms-book-rust-rocket-diesel/Cargo.toml
+++ b/ms-book-rust-rocket-diesel/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ms-book-rust-diesel"
+name = "ms-book-rust-rocket-diesel"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,6 +13,7 @@ dotenv = "0.15.0"
 r2d2-diesel = "1.0.0"
 r2d2 = "0.8.9"
 serde = "1.0.116"
+chrono = "0.4.22"
 serde_derive = "1.0.116"
 serde_json = "1.0.58"
 env_logger = "0.5.12"
